Added authentication for the instructor role and common error page.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,7 @@ logging:
         SQL: DEBUG
       nodeValue: WARN
     blog: WARN
+#    org.springframework.security: DEBUG
 server:
   port: 8080
 
